--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   <!-- MESSAGE SCREEN -->
   <div id="message" class="message">
      <div class="photo-container">
-    <img src="queen.jpg" alt="2x2photo">
+    <img src="patchot.jpg" alt="2x2photo">
   </div>
-    <p>Hi Love, Happy Birthday! I just want you to know that you are appreciated and worth of everything. All i wish for you to have a good health and happy as always even I am not the reason anymore. I love you always, in all ways.❤️</p>
+    <p>Hi Sophia. Dont know you well but I hope I can have a chance to know you more hehehe❤️</p>
   <a href="flower.html" class="btn">Click mo para sa magic</a>
 
 </div>
